fixed "Easy To Customize" example hover - inner shadow size not large enough

--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
   --tag-text-color--edit    : #111;
   --tag-remove-bg           : var(--tag-hover);
   --tag-pad                 : .6em 1em;
-  --tag-inset-shadow-size   : 1.3em;
+  --tag-inset-shadow-size   : 1.35em;
   --tag-remove-btn-bg--hover: black;
 
   display: inline-block;
@@ -2216,7 +2216,7 @@ $('.tags-jquery--removeAllBtn').on('click', jqTagify.removeAllTags.bind(jqTagify
                     cssVar: ['tag-inset-shadow-size', 'em'],
                     label: 'tag-inset-shadow-size',
                     type: 'range',
-                    min: 0, max: 2 , step:.1, value:1.1,
+                    min: 0, max: 2 , step:.1,
                 },
                 {
                     cssVar: ['tag--min-width', 'ch'],
