--- a/test/test.html
+++ b/test/test.html
@@ -262,7 +262,16 @@ and [[{"value": "readonly", "readonly":true}]]
         //     enabled: 0
         // },
         // after 2 characters typed, all matching values from this list will be suggested in a dropdown
-        whitelist: [].concat(whitelist)
+        whitelist: [].concat(whitelist),
+        hooks: {
+            beforePaste: function(content){
+                return new Promise((resolve, reject) => {
+                    confirm("Allow pasting?")
+                        ? resolve()
+                        : reject()
+                })
+        }
+        }
     })
 
     tagify.addTags( `a,a` )
