--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           .leftSide .demoLink svg{ box-shadow: 0 0 0 3px black inset; border-radius:50%; transition:.12s ease-out; }
           .leftSide .demoLink:hover svg{ box-shadow: 0 0 0 0 black inset; transform:scale(1.2); }
           .leftSide > header > h3{ margin-top:.5rem; }
-          .leftSide h2{ color:salmon; text-transform:capitalize; font-size:2em; margin-top:0; line-height:.9; margin-bottom:0; }
+          .leftSide h2{ color:salmon; text-transform:capitalize; font-size:1.6em; font-size:calc(1.3em + .5vw); line-height:1.2; margin-top:0; margin-bottom:0; }
           .leftSide h2 > a{
              color:inherit;
              text-decoration: none;
@@ -120,7 +120,7 @@
 
           header.isSticky .repoLink{
             height: 50px;
-            margin: -.7em 0 -1.6em 0;
+            margin: -.5em 0 -1.6em 0;
             transition: .55s cubic-bezier(.5,0,.5,1.075);
           }
 
@@ -128,7 +128,7 @@
 
          .repoLink{
             height: 70px;
-            margin: -1em 0 -2em 0;
+            margin: -1em 0 -1.5em 0;
             transform: translateX(calc(50vw - 50%));
             transition: .2s ease-out;
          }
@@ -360,7 +360,7 @@
     <body>
         <header>
             <a class='repoLink' title='Go To Repo' href='https://github.com/yairEO/tagify'>
-                <svg height="100%" viewBox="0 0 280 150" fill-rule="evenodd" fill="salmon" xmlns="http://www.w3.org/2000/svg">
+                <svg height="100%" viewBox="0 0 280 150" fill-rule="evenodd" fill="#444" xmlns="http://www.w3.org/2000/svg">
                     <path d="m86.601,17.001q3.1,0.6 4.65,2.1a5.288,5.288 0 0 1 1.073,1.435a4.56,4.56 0 0 1 0.477,2.065a9.273,9.273 0 0 1 -0.161,1.79q-0.198,1.007 -0.641,1.776a4.402,4.402 0 0 1 -1.048,1.234a4.933,4.933 0 0 1 -1.566,0.832q-1.69,0.563 -4.284,0.368q-6.891,-0.536 -11.466,-0.808a261.493,261.493 0 0 0 -2.584,-0.142q-4.517,-0.223 -11.555,-0.327a671.4,671.4 0 0 0 -1.695,-0.023q-3.7,18.4 -6.8,37q-1.1,6.8 -2.3,15.75q-1.073,8.006 -1.507,13.252a122.559,122.559 0 0 0 -0.093,1.198a6.511,6.511 0 0 1 -0.477,2.097a5.419,5.419 0 0 1 -1.923,2.353a8.433,8.433 0 0 1 -3.705,1.439a11.101,11.101 0 0 1 -1.595,0.111q-3.3,0 -5.1,-1.6a5.269,5.269 0 0 1 -1.789,-3.8a7.187,7.187 0 0 1 -0.011,-0.4q0,-1.809 0.426,-5.409a156.38,156.38 0 0 1 0.324,-2.541q0.75,-5.55 1.75,-11.65a316.042,316.042 0 0 0 0.755,-4.35q0.285,-1.719 0.521,-3.281a171.143,171.143 0 0 0 0.424,-2.969q1.1,-7.6 2.5,-15.1q1.4,-7.5 2.8,-14.2q0.3,-1.5 0.7,-3.45q0.4,-1.95 0.9,-4.35a138.602,138.602 0 0 0 -5.715,0.285q-5.22,0.377 -8.851,1.132a36.936,36.936 0 0 0 -0.834,0.183a30.163,30.163 0 0 0 -2.893,0.815q-2.915,0.992 -4.572,2.391a7.794,7.794 0 0 0 -0.485,0.444a7.93,7.93 0 0 0 -2.298,4.982a10.773,10.773 0 0 0 -0.052,1.068a11.586,11.586 0 0 0 1.531,5.721a14.176,14.176 0 0 0 0.469,0.779q0.4,0.7 0.4,1.5a3.407,3.407 0 0 1 -0.596,1.89q-0.347,0.53 -0.896,1.038a8.6,8.6 0 0 1 -0.758,0.622a9.129,9.129 0 0 1 -1.997,1.128a7.073,7.073 0 0 1 -2.653,0.522a4.734,4.734 0 0 1 -1.316,-0.174a3.7,3.7 0 0 1 -1.484,-0.826q-1.812,-1.54 -3.05,-4.272a18.514,18.514 0 0 1 -0.25,-0.578a16.991,16.991 0 0 1 -1.117,-4.269a21.937,21.937 0 0 1 -0.183,-2.881a21.081,21.081 0 0 1 0.881,-6.241a16.64,16.64 0 0 1 4.669,-7.409q5.55,-5.15 16.9,-7.55q11.35,-2.4 29.15,-2.4q9.389,0 15.536,0.292a148.328,148.328 0 0 1 2.014,0.108a121.637,121.637 0 0 1 5.415,0.446q2.459,0.261 4.624,0.611a67.021,67.021 0 0 1 1.411,0.243z"/>
                     <path d="m72.595,99.73a13.778,13.778 0 0 0 4.706,0.771q7.9,0 13.1,-8.4a16.672,16.672 0 0 0 1.021,2.303a12.716,12.716 0 0 0 3.129,3.847a11.7,11.7 0 0 0 0.433,0.338a9.221,9.221 0 0 0 5.617,1.912a10.999,10.999 0 0 0 2.045,-0.194q1.837,-0.347 3.728,-1.313a20.867,20.867 0 0 0 3.127,-1.993a44.987,44.987 0 0 0 3.38,-2.85a54.085,54.085 0 0 0 5.32,-5.75a6.749,6.749 0 0 0 0.903,-1.349q0.997,-1.953 0.997,-4.851q0,-1.23 -0.257,-2.152a4.376,4.376 0 0 0 -0.493,-1.148a3.165,3.165 0 0 0 -0.301,-0.408a2.225,2.225 0 0 0 -1.749,-0.792a3.137,3.137 0 0 0 -1.86,0.618a4.764,4.764 0 0 0 -0.84,0.782a181.098,181.098 0 0 1 -1.496,1.767q-3.559,4.146 -5.804,6.183q-2.7,2.45 -4.6,2.45a3.041,3.041 0 0 1 -0.221,-0.008a2.394,2.394 0 0 1 -1.729,-0.892a2.866,2.866 0 0 1 -0.202,-0.274q-0.318,-0.489 -0.451,-1.125a4.872,4.872 0 0 1 -0.097,-1.001a19.067,19.067 0 0 1 0.003,-0.32q0.057,-3.429 1.318,-10.52a245.902,245.902 0 0 1 0.979,-5.16a306.979,306.979 0 0 0 0.187,-0.991q1.313,-7.044 1.313,-9.009a4.851,4.851 0 0 0 -0.002,-0.141q-0.098,-3.359 -4.898,-3.359q-2.3,0 -4.4,0.4a16.337,16.337 0 0 0 -0.167,-0.672q-0.453,-1.664 -1.083,-2.378a1.767,1.767 0 0 0 -0.381,-0.321q-0.833,-0.529 -2.569,-0.529a21.082,21.082 0 0 0 -6.202,0.924a24.014,24.014 0 0 0 -6.848,3.426q-6.15,4.35 -9.85,11.5q-3.7,7.15 -3.7,15.15a28.402,28.402 0 0 0 0.002,0.359q0.089,7.052 3.698,11.441a11.86,11.86 0 0 0 5.194,3.729zm15.406,-18.829l3.7,-18.4a11.707,11.707 0 0 0 -6.51,2.189a15.265,15.265 0 0 0 -1.24,0.961a19.709,19.709 0 0 0 -4.116,4.979a25.263,25.263 0 0 0 -1.534,3.071q-2.1,5 -2.1,10.6a12.33,12.33 0 0 0 0.099,1.617q0.25,1.888 1.135,2.964a3.841,3.841 0 0 0 0.016,0.019a4.086,4.086 0 0 0 2.786,1.464a5.852,5.852 0 0 0 0.664,0.036q2.2,0 4.2,-2.6q2,-2.6 2.9,-6.9z"/>
                     <path d="m150.501,96.801l-6.4,4.3q-2.484,13.529 -5.971,23.278a75.028,75.028 0 0 1 -3.979,9.272a32.613,32.613 0 0 1 -3.394,5.323q-2.196,2.754 -4.72,4.346a13.857,13.857 0 0 1 -7.536,2.181a13.461,13.461 0 0 1 -3.83,-0.52a10.533,10.533 0 0 1 -4.47,-2.63a10.575,10.575 0 0 1 -3.087,-6.406a14.662,14.662 0 0 1 -0.113,-1.844a21.012,21.012 0 0 1 1.22,-6.857q0.948,-2.751 2.631,-5.64a43.813,43.813 0 0 1 1.749,-2.753a46.804,46.804 0 0 1 3.925,-4.881q6.006,-6.616 17.075,-15.169l0.6,-3.9q-1.7,2.7 -4.45,4.15q-2.75,1.45 -5.45,1.45a13.778,13.778 0 0 1 -4.706,-0.771a11.86,11.86 0 0 1 -5.194,-3.729q-3.609,-4.389 -3.698,-11.441a28.402,28.402 0 0 1 -0.002,-0.359q0,-8 3.7,-15.15q3.7,-7.15 9.85,-11.5a24.014,24.014 0 0 1 6.848,-3.426a21.082,21.082 0 0 1 6.202,-0.924q1.736,0 2.569,0.529a1.767,1.767 0 0 1 0.381,0.321q0.63,0.714 1.083,2.378a16.337,16.337 0 0 1 0.167,0.672q1.742,-0.367 3.989,-0.397a30.328,30.328 0 0 1 0.411,-0.003q2.5,0 3.55,0.75q1.001,0.715 1.048,2.748a8.802,8.802 0 0 1 0.002,0.202q0,1.113 -0.086,1.796a6.337,6.337 0 0 1 -0.014,0.104q-0.4,3.1 -2.5,15.7q-0.4,2.4 -0.85,5.25q-0.45,2.85 -0.95,6.05q7.7,-6 14.8,-10.6a7.207,7.207 0 0 1 0.783,-0.422q0.83,-0.378 1.517,-0.378a2.186,2.186 0 0 1 1.736,0.81a3.273,3.273 0 0 1 0.314,0.44q0.75,1.25 0.75,3.15q0,1.497 -0.297,2.571a4.943,4.943 0 0 1 -0.403,1.029q-0.7,1.3 -2.2,2.3q-8.6,5.8 -12.6,8.6zm-15.2,-17.2l3.2,-17.1a11.292,11.292 0 0 0 -6.139,2.023a14.986,14.986 0 0 0 -1.461,1.127a19.815,19.815 0 0 0 -3.986,4.835a25.642,25.642 0 0 0 -1.614,3.215q-2.1,5 -2.1,10.6a12.33,12.33 0 0 0 0.099,1.617q0.25,1.888 1.135,2.964a3.841,3.841 0 0 0 0.016,0.019a4.086,4.086 0 0 0 2.786,1.464a5.852,5.852 0 0 0 0.664,0.036a4.113,4.113 0 0 0 2.179,-0.655q0.657,-0.405 1.297,-1.058a10.912,10.912 0 0 0 0.924,-1.087q1.54,-2.053 2.435,-5.398a29.644,29.644 0 0 0 0.565,-2.602zm-15.7,56.2a2.805,2.805 0 0 0 1.542,-0.529q1.712,-1.132 3.688,-4.691a38.125,38.125 0 0 0 0.42,-0.78q3.15,-6 6.05,-19.1q-7.615,6.527 -11.024,11.783a27.437,27.437 0 0 0 -0.076,0.117q-2.151,3.353 -2.941,6.186a11.603,11.603 0 0 0 -0.459,3.114q0,1.7 0.65,2.8q0.65,1.1 2.15,1.1z" />
@@ -776,7 +776,7 @@
                         <h2><a href='#section-manual-suggestions'>Render suggestions list manually</a></h2>
                     </header>
                     <p>
-                        Renders the suggestions list manually, useful for situations where you wish to shown the suggestions list
+                        Renders the suggestions list <strong>manually</strong> - useful for situations where it is wished showing the suggestions list
                         inside a modal or your own popup implementaion, or even always show it. In this example the list is always shown.
                     </p>
                     <details>
