improved the "easy to customize" section with link to CSS variables

--- a/index.html
+++ b/index.html
@@ -561,12 +561,15 @@
                         <h2><a href='#section-different-look'>Easy to customize</a></h2>
                     </header>
                     <p>
+                        The easiest way to customize styles <em>(colors, borders, spacing, radii, etc.)</em> is by using <a href='https://github.com/yairEO/tagify#css-variables'>CSS variables</a>.
+                    </p>
+                    <p>
                         No placeholder, and no way of adding tags from within the component, but only
                         by clicking the (+) button, which is not related to Tagify in anyway, but in this example
                         it is shown how combining a few simple things make customization easy.
                     </p>
                     <p>
-                        This example also shows how to implement minimum-allowed tags
+                        (This example also shows how to implement minimum-allowed tags)
                     </p>
                     <details>
                       <summary></summary>
