[feat] added new `dropdown.sortby` setting with two possible values: a function or a string (`startsWith`) for smarter suggestions sorting

--- a/index.html
+++ b/index.html
@@ -917,6 +917,7 @@
 #users-list .tagify__tag img{
     width: 100%;
     vertical-align: top;
+    pointer-events: none;
 }
 </style>
                     </details>
@@ -1029,6 +1030,7 @@
     height: 16px;
     margin-right: 3px;
     border-radius: 2px;
+    pointer-events: none;
 }
 </style>
                     </details>
